fix x overflow on mobile

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 :root {
     font-family: monospace;
 
